# 100days

./: .pre-commit-config.yaml  Day 001 - HaNoi Tower.ipynb  Day 002 - Matrix Chain Multiplication.ipynb  README.md  pyproject.toml
